[tool.poetry]
name = "grex-gateware"
version = "0.1.0"
description = ""
authors = ["Kiran Shila <me@kiranshila.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
colorlog = "^6.6.0"
pyaml = "^21.10.1"
odict = "^1.9.0"
lxml = "^4.9.0"
numpy = "^1.22.4"
xml2vhdl-ox = {path = "xml2vhdl/scripts/python/xml2vhdl-ox/"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
