[tool.poetry]
name = "grex-gateware"
version = "0.1.0"
description = ""
authors = ["Kiran Shila <me@kiranshila.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
xml2vhdl-ox = {path = "xml2vhdl/scripts/python/xml2vhdl-ox/"}
numpy = "^1.22.4"
colorlog = "^6.6.0"
pyaml = "^21.10.1"
odict = "^1.9.0"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
